# editor

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  RESOURCES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: bundle.yml
flatpak/: com.moegebytes.yona.metainfo.xml  com.moegebytes.yona.yml
resources/: JMdict_e.xml  ipadic-mecab-v270.dict  ipadic-mecab-v270.dict.zst  kanjidic2.xml
resources/src/: JMdict_e.xml.zst  enwiktionary-ja_en.jsonl.zst  kanjidic2.xml.zst  wiktionary-ja_en.jsonl.zst
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  dictionary.rs  jmdict.rs  kanjidic.rs  logging.rs  main.rs  project.rs  recovery.rs  settings.rs  strings.rs  util.rs  wiktionary.rs
src/components/: AboutDialog.svelte  DictTab.svelte  DictionaryPanel.svelte  EditorTable.svelte  FindReplaceBar.svelte  GlossaryPanel.svelte  GlossaryView.svelte  GoToLineDialog.svelte  JmdictTab.svelte  KanjiDetail.svelte  ProjectHome.svelte  RecoveryDialog.svelte  SettingsView.svelte  StatusBar.svelte  Toolbar.svelte  UnsavedChangesDialog.svelte  WiktTab.svelte
src/components/dictionary/: JmdictTab.svelte  KanjiDetail.svelte  KanjiText.svelte  WiktTab.svelte
src/components/glossary/: EntryDetail.svelte  GlossaryList.svelte  GlossaryToolbar.svelte
src/components/ui/: AskDialog.svelte  ContextMenu.svelte  CopyButton.svelte  Dialog.svelte  DropdownMenu.svelte  LoadingOverlay.svelte  PathText.svelte  ToastContainer.svelte  ViewHeader.svelte
src/lib/: debounce.svelte.ts  dialogs.ts  ipc.ts  search.svelte.ts  segment.ts  toast.svelte.ts  types.ts  undo.svelte.ts  utils.ts
tools/: Cargo.toml
tools/build-dictionary/: Cargo.toml
tools/build-dictionary/src/: main.rs
tools/build-jmdict/: Cargo.toml
tools/build-jmdict/src/: main.rs
tools/build-kanjidic/: Cargo.toml
tools/build-kanjidic/src/: main.rs
tools/build-wiktionary/: Cargo.toml
tools/build-wiktionary/src/: main.rs
