[package]
name = "yona"
version = "0.7.1"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-single-instance = "=2.4.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.119"
thiserror = "=2.0.18"
rusqlite = { version = "=0.35.0", features = ["bundled"] }
vibrato = { version = "=0.5.2", default-features = false }
uuid = { version = "=1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.26.0"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
