[package]
name = "yona"
version = "2.2.1"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-single-instance = "=2.4.0"
tauri-plugin-opener = "=2.5.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.119"
thiserror = "=2.0.18"
rusqlite = { version = "=0.37.0", features = ["bundled"] }
vibrato = { version = "=0.5.2", default-features = false }
uuid = { version = "=1.23.0", features = ["v4"] }
log = "=0.4.29"
simplelog = "=0.12.2"
time-format = "=1.2.2"

[dev-dependencies]
tempfile = "=3.26.0"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
