[package]
name = "yona"
version = "3.2.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-single-instance = "=2.4.1"
tauri-plugin-opener = "=2.5.3"
tauri-plugin-os = "=2.3.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
rusqlite = { version = "=0.37.0", features = ["bundled"] }
vibrato = { version = "=0.5.2", default-features = false }
uuid = { version = "=1.23.1", features = ["v4"] }
os_info = { version = "=3.14.0", default-features = false }
log = "=0.4.29"
simplelog = "=0.12.2"
time-format = "=1.2.2"
zip = { version = "=8.5.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "=3.26.0"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
